--- a/cloud/frontend/index.html
+++ b/cloud/frontend/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <script>
-const BASE = "http://localhost:8000";
+const BASE = "https://collections-baking-reducing-craps.trycloudflare.com";
 
 async function checkStatus() {
   const el = document.getElementById("status");
