--- a/cloud/frontend/index.html
+++ b/cloud/frontend/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8" />
   <title>Hadoop WordCount UI</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: "Segoe UI", Roboto, Arial;
-      background: #eef2f5;
+      font-family: "Inter", "Segoe UI", Roboto, Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       margin: 0;
       padding: 0;
       display: flex;
@@ -16,106 +20,203 @@
     }
 
     .container {
-      width: 700px;
-      margin-top: 50px;
+      width: 90%;
+      max-width: 800px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+
+    .header {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 30px;
+      animation: slideDown 0.6s ease;
+    }
+
+    .header h1 {
+      font-size: 3rem;
+      margin: 0;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .header p {
+      font-size: 1.1rem;
+      margin-top: 10px;
+      opacity: 0.95;
     }
 
     .card {
-      background: #fff;
-      padding: 25px;
-      border-radius: 12px;
+      background: linear-gradient(145deg, #ffffff, #f8f9fa);
+      padding: 30px;
+      border-radius: 20px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-      animation: fadeIn 0.4s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      border: 1px solid rgba(255,255,255,0.3);
+      animation: fadeIn 0.5s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 40px rgba(0,0,0,0.3);
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    h1 {
-      text-align: center;
-      color: #222;
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h2 {
       margin-top: 0;
       color: #333;
+      font-size: 1.6rem;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
 
     textarea {
       width: 100%;
-      height: 130px;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #bbb;
-      font-size: 15px;
+      height: 140px;
+      padding: 15px;
+      border-radius: 12px;
+      border: 2px solid #e0e0e0;
+      font-size: 16px;
       resize: vertical;
+      font-family: inherit;
+      transition: border-color 0.3s ease;
+    }
+
+    textarea:focus {
+      outline: none;
+      border-color: #667eea;
     }
 
     button {
-      padding: 12px 22px;
+      padding: 14px 28px;
       border: none;
-      border-radius: 8px;
-      font-size: 15px;
+      border-radius: 12px;
+      font-size: 16px;
+      font-weight: 600;
       cursor: pointer;
-      margin-top: 10px;
+      margin-top: 15px;
       color: #fff;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
 
-    .status-btn { background: #0078ff; }
-    .wordcount-btn { background: #28a745; }
+    .status-btn {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    }
 
-    .status-btn:hover { background: #0064d4; }
-    .wordcount-btn:hover { background: #1e8e37; }
+    .wordcount-btn {
+      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+    }
+
+    .status-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+    }
+
+    .wordcount-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(245, 87, 108, 0.4);
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
 
     .output-box, pre {
-      background: #1e1e1e;
-      color: #caffca;
-      padding: 15px;
-      border-radius: 8px;
+      background: linear-gradient(135deg, #1e1e1e 0%, #2d2d2d 100%);
+      color: #4ecca3;
+      padding: 20px;
+      border-radius: 12px;
       overflow-x: auto;
+      border: 2px solid #333;
+      box-shadow: inset 0 2px 10px rgba(0,0,0,0.3);
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 15px;
+      margin-top: 20px;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
 
     th, td {
-      padding: 8px 12px;
-      border-bottom: 1px solid #ccc;
+      padding: 14px 18px;
       text-align: left;
     }
 
     th {
-      background: #f2f2f2;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    tr {
+      border-bottom: 1px solid #e0e0e0;
+      transition: background-color 0.2s ease;
+    }
+
+    tr:hover {
+      background-color: #f5f5f5;
+    }
+
+    .emoji {
+      font-size: 2.5rem;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 5px 12px;
+      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+      color: white;
+      border-radius: 20px;
+      font-size: 0.85rem;
+      font-weight: 600;
+      margin-left: 10px;
     }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <h1>🔥 Hadoop WordCount Dashboard</h1>
+  <div class="header">
+    <h1><span class="emoji">🚀</span> Hadoop WordCount <span class="badge">LIVE</span></h1>
+    <p>Distributed Big Data Processing Made Easy</p>
+  </div>
 
   <div class="card">
-    <h2>Cluster Status</h2>
-    <button class="status-btn" onclick="checkStatus()">Check Status</button>
+    <h2>📊 Cluster Status</h2>
+    <button class="status-btn" onclick="checkStatus()">🔍 Check Cluster Health</button>
     <pre id="status"></pre>
   </div>
 
   <div class="card">
-    <h2>Run WordCount Job</h2>
-    <textarea id="text" placeholder="Enter some text..."></textarea>
-    <button class="wordcount-btn" onclick="runWordCount()">Run Job</button>
+    <h2>✨ Run WordCount Job</h2>
+    <textarea id="text" placeholder="Enter your text here to analyze word frequencies..."></textarea>
+    <button class="wordcount-btn" onclick="runWordCount()">🚀 Run MapReduce Job</button>
   </div>
 
   <div class="card">
-    <h2>WordCount Results</h2>
+    <h2>📈 WordCount Results</h2>
     <div class="output-box">
-      <pre id="output"></pre>
+      <pre id="output">Results will appear here...</pre>
     </div>
     <div id="table"></div>
   </div>
